<resources>
    <string name="app_name">Sand</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="subjects">Subjects</string>
    <string name="share">share</string>
    <string name="send_feedback">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="games">Games</string>
    <string name="quizzes">Quizzes</string>
    <string name="facts">Facts</string>
    <string name="about">About</string>
    <string name="learn">Learn</string>
    <string name="main">Main</string>
    <string name="fact">Fact</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="memory_game">Memory Game</string>
    <string name="description">Description</string>
    <string name="click_here">click here</string>
    <string name="todo">TODO</string>
    <string name="enter_your_message">enter your message</string>
    <string name="send">send</string>
    <string name="clear">Clear</string>
    <string name="enter_your_name">enter your name</string>
    <string name="thefact" />
    <string name="sub">sub</string>
    <string name="title">title</string>
    <string name="syllabus">syllabus</string>
    <string name="days">days</string>
    <string name="music">music</string>


    <string-array name="Subjects">
        <item> Mathematics </item>
        <item> English </item>
        <item> Wildlife </item>
        <item> History </item>
    </string-array>

    <string-array name="Mathematics">
        <item> addition </item>
        <item> subtraction </item>
        <item> multiplication </item>
    </string-array>
    <string-array name="English">
        <item> noun </item>
        <item> pronoun </item>
        <item> adverb </item>
    </string-array>
    <string-array name="Wildlife">
        <item> goat lol</item>
        <item> cat lol</item>
        <item> bat lol</item>
    </string-array>
    <string-array name="History">
        <item> water </item>
        <item> waste</item>
        <item> later </item>
    </string-array>
    <string-array name="title">
        <item> unit 1</item>
        <item> unit 2</item>
        <item> unit 3</item>
    </string-array>
</resources>
