<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FeedbackActivity"
    android:weightSum="4"
    android:orientation="vertical">




    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/enter_your_name"
            android:inputType=""
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <EditText
            android:textStyle="bold"
            android:id = "@+id/messageEditText"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:hint = "@string/enter_your_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:inputType=""
            android:layout_marginStart="10dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/sendButtonId"
            android:text="@string/send"
            android:textStyle="bold"
            android:textSize="17sp"
            style = "@style/Base.Widget.AppCompat.Button.Colored"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/clearButtonId"
            android:text="@string/clear"
            android:textStyle="bold"
            android:textSize="17sp"
            style = "@style/Base.Widget.AppCompat.Button.Colored"/>
    </LinearLayout>


</LinearLayout>